# mcp-proto-okn

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  claude_desktop_config.json  glama.json  pyproject.toml
charts/mcp-proto-okn/: Chart.yaml  sterling-values.yaml  values.yaml
config/: claude_desktop_config.json  claude_desktop_config_dev.json  mcp-dev.json  mcp-unified.json  mcp.json  registry.json
docs/: _config.yml  adding-a-graph.md  api.md  benchmarks.md  build_publish.md  chatgpt-setup.md  claude-setup.md  deploy-aws.md  develop.md  examples.md  installation.md  spoke_genelab_overview.md  unified-server.md
docs/benchmarks/: 1-securechainkg-ffmpeg-vulnerabilities-evaluation.md  1-securechainkg-ffmpeg-vulnerabilities-mcp-server-design-feedback.md  1-securechainkg-ffmpeg-vulnerabilities-query-performance-analysis.md  1-securechainkg-ffmpeg-vulnerabilities-query-semantic-analysis.md  1-securechainkg-ffmpeg-vulnerabilities.md  2-securechainkg-openssl-vulnerabilities-comparison.md  2-securechainkg-openssl-vulnerabilities-evaluations.md  2-securechainkg-openssl-vulnerabilities-query-performance-analysis.md  2-securechainkg-openssl-vulnerabilities-query-semantic-analysis.md  2-securechainkg-openssl-vulnerabilities-summary-table.csv  2-securechainkg-openssl-vulnerabilities.md  3-securechainkg-openssl-dependencies-vulnerabilities.md  4-securechainkg-libcurl-vulnerabilities.md  5-securechainkg-libde265-vulnerabilities.md
docs/examples/: OSD-161-GPT-5.2-vs-studio.md  OSD-161-Groc-Code-Fact-1-vs-studio.md  OSD-161-sonnet-4.5-claude.md  OSD-161-sonnet-4.5-vs-studio.md  OSD-161_GPT-5.2-report-vs-studio.md  OSD-161_Gemini-3-ProPreview-vs-studio.md  biobricks-aopwiki_overview.md  biobricks-ice_overview.md  biobricks-mesh_overview.md  biobricks-pubchem-annotations_overview.md  biobricks-tox21_overview.md  biobricks-toxcast_overview.md  (+105 more)
mcp_server_protookn/: __init__.py  server.py
scripts/: build_registry.py  extract_entities.py
tests/: test_edge_properties.py  test_empty_filter.py  test_http_transport.py  test_identifier_mapping.py  test_real_data.py  test_registry.py  test_unified_server.py
(+101 files in other folders)
