[project]
name = "mcp-server-protookn"
version = "0.1.0"
description = "MCP server for querying FRINK ProtoOKN SPARQL endpoints"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
keywords = ["sparql", "mcp", "proto-okn", "frink"]
authors = [
    { name = "Peter W Rose", email = "pwrose.ucsd@gmail.com" },
    { name = "Eric Zhu", email = "ekzhu@users.noreply.github.com" }
]
dependencies = [
    "mcp>=1.6.0",
    "sparqlwrapper>=2.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10"
]

[project.scripts]
mcp-server-protookn = "mcp_server_protookn.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server_protookn"]
